  + For debugging, and tweaking how ppucd.txt is written,
    the tool has an --only_ppucd option:
      py/preparseucd.py $UNICODE_DATA --only_ppucd path/to/ppucd/outputfile
    e.g.
      py/preparseucd.py $UNICODE_DATA --only_ppucd /tmp/ppucd.txt

* new constants for new property values
- preparseucd.py error:
    ValueError: missing uchar.h enum constants for some property values: [('blk', {'Garay', 'Tulu_Tigalari', 'Todhri', 'Sunuwar', 'Egyptian_Hieroglyphs_Ext_A', 'Kirat_Rai', 'Symbols_For_Legacy_Computing_Sup', 'Myanmar_Ext_C', 'Ol_Onal', 'Gurung_Khema'}), ('sc', {'Gara', 'Onao', 'Todr', 'Krai', 'Tutg', 'Sunu', 'Gukh'}), ('InSC', {'Reordering_Killer'})]
  = PropertyValueAliases.txt new property values (diff old & new .txt files)
    (cd $UNIDATA_ROOT && diff -u uni15.1/final/ucd/PropertyValueAliases.txt uni16/alpha/UCD/ucd/PropertyValueAliases.txt | egrep '^[-+][a-zA-Z]')
    +age; 16.0                             ; V16_0
    +blk; Egyptian_Hieroglyphs_Ext_A       ; Egyptian_Hieroglyphs_Extended_A
    +blk; Garay                            ; Garay
    +blk; Gurung_Khema                     ; Gurung_Khema
    +blk; Kirat_Rai                        ; Kirat_Rai
    +blk; Myanmar_Ext_C                    ; Myanmar_Extended_C
    +blk; Ol_Onal                          ; Ol_Onal
    +blk; Sunuwar                          ; Sunuwar
    +blk; Symbols_For_Legacy_Computing_Sup ; Symbols_For_Legacy_Computing_Supplement
    +blk; Todhri                           ; Todhri
    +blk; Tulu_Tigalari                    ; Tulu_Tigalari
    +InSC; Reordering_Killer               ; Reordering_Killer
    -jg ; Teh_Marbuta_Goal                 ; Hamza_On_Heh_Goal
    +jg ; Teh_Marbuta_Goal                 ; Teh_Marbuta_Goal                 ; Hamza_On_Heh_Goal
    +sc ; Gara                             ; Garay
    +sc ; Gukh                             ; Gurung_Khema
    +sc ; Krai                             ; Kirat_Rai
    +sc ; Onao                             ; Ol_Onal